--- a/PakkR.Windows10/Pages/MainPage.xaml
+++ b/PakkR.Windows10/Pages/MainPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="PakkR.Windows10.MainPage"
+    x:Class="PakkR.Windows10.Pages.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:PakkR.Windows10"
@@ -7,7 +7,5 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-    </Grid>
+    <Frame x:Name="NavigationalFrame"/>
 </Page>
